[package]
name = "lru-simple"
version = "0.1.0"
authors = ["li"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"


[[example]]
name = "time"
path = "example/time.rs"

[[example]]
name = "simple"
path = "example/simple.rs"

[dev-dependencies]
simple_logger = "1.0"